# CarbonSaathi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  DEPLOYMENT.md  Dockerfile  Makefile  PROGRESS.md  README.md  SECURITY.md  VALIDATION_STRATEGY.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  analyst_agent.py  base.py  coach_agent.py  factories.py  logger_agent.py
app/agents/prompts/: __init__.py  analyst_v1.py  coach_v1.py  logger_v1.py
app/core/: __init__.py  auth.py  config.py  firebase.py  gemini.py  governance.py  logging.py  ratelimit.py  security.py  templates.py
app/data/: food_factors.json  state_grid_factors.json  transport_factors.json
app/models/: __init__.py  activity.py  emission.py  generation_state.py  insight.py  recommendation.py  shared.py  user.py
app/routes/: __init__.py  activities.py  auth.py  dashboard.py  health.py  insights.py  pages.py  recommendations.py  users.py
app/services/: __init__.py  emission_service.py  firestore_service.py  orchestrator.py  staleness.py
app/static/css/: app.css
app/static/js/: api_client.js  auth.js  dashboard_page.js  htmx_bearer.js  insights_page.js  log_page.js  onboarding_page.js  recommendations_page.js  sse_consumer.js
app/templates/: base.html  dashboard.html  insights.html  log.html  onboarding.html  recommendations.html  sign_in.html
app/templates/partials/: activity_card.html  insight_card.html  recommendation_card.html
docs/: adr.md
docs/img/: .gitkeep
scripts/: 01_gcp_setup.sh  02_load_secrets.sh  03_deploy.sh  __init__.py  verify_emission_data.py
tests/: __init__.py  _sse.py  conftest.py  test_agents_analyst.py  test_agents_analyst_golden.py  test_agents_base.py  test_agents_coach.py  test_agents_coach_golden.py  test_agents_factories.py  test_agents_logger.py  test_config.py  test_core_auth.py  test_core_gemini.py  test_emission_service.py  test_firebase_init.py  test_firestore_service.py  test_governance.py  test_health.py  test_integration_agent_chain.py  test_logging.py  test_models_activity.py  test_models_emission.py  test_models_insight.py  test_models_recommendation.py  test_models_shared.py  test_models_user.py  test_ratelimit.py  test_routes_activities.py  test_routes_auth.py  test_routes_auth_config.py  test_routes_dashboard.py  test_routes_full_chain.py  test_routes_insights.py  test_routes_pages.py  test_routes_recommendations.py  test_routes_users.py  test_security.py  test_security_injection.py  test_services_orchestrator.py  test_services_staleness.py  (+1 more)
tests/fixtures/: __init__.py  golden_activities.py
tests/fixtures/agent_goldens/: __init__.py
tests/fixtures/agent_goldens/analyst/: all_insights_unsupported.json  empty_low_data.json  invalid_insight_type_skipped.json  model_invalid_json.json  model_timeout.json  unknown_activity_id_filtered.json  valid_3_insights.json
tests/fixtures/agent_goldens/coach/: all_recs_invalid.json  electricity_reduce_basic.json  (+5 more)
tests/integration/: __init__.py  conftest.py  test_firestore_range_queries.py
(+8 files in other folders)
