[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbonsaathi"
version = "0.1.0"
description = "A personal AI companion for Indian metro professionals to track and reduce their carbon footprint."
requires-python = ">=3.13,<3.14"
authors = [{ name = "Apoorv Gupta" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "google-generativeai==0.8.6",
    "firebase-admin==7.4.0",
    "slowapi==0.1.10",
    "secure==2.0.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "structlog==26.1.0",
    "email-validator>=2.0.0",
    "google-cloud-firestore>=2.17.0",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.18",
    "black==26.5.1",
    "mypy==2.1.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "bandit[toml]==1.9.4",
    "pip-audit==2.10.1",
    "pre-commit==4.6.0",
    "pyyaml==6.0.3",
    "types-requests==2.33.0.20260518",
    "freezegun>=1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "D", "S", "RUF"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101", "S603", "S607"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# firebase-admin ships without py.typed; google-generativeai ships py.typed but
# does not re-export its public API (configure, GenerativeModel) under
# no_implicit_reexport. Relax re-export checking for these third-party SDKs.
module = [
    "firebase_admin",
    "firebase_admin.*",
    "google",
    "google.generativeai",
    "google.generativeai.*",
]
ignore_missing_imports = true
implicit_reexport = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py", "*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
